objects/Request__c.object
<CustomObject>
    <description>Used by SF Admins to send configuration updates to Sales Automation</description>
    <fields>
        <fullName>Adminstrators_Involved__c</fullName>
        <label>Adminstrator(s) Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aged_Days__c</fullName>
        <description>If the status is Open, Need More Information, or Waiting on Approval then calculate from today minus creation date.  If status is Closed  then calculate from last modified date minus creation date.</description>
        <formula>IF(ISPICKVAL( Status__c , &quot;Closed&quot;), ROUND( Date_Time_Closed__c - CreatedDate,0 ),
	IF(ISPICKVAL( Status__c , &quot;Cancelled&quot;), ROUND( LastModifiedDate - CreatedDate,0),
		ROUND(NOW()- CreatedDate,0)	
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aged Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Request_Team_Members__c</fullName>
        <description>This field contains a concatenated list of all Request Team Members on a particular request.</description>
        <label>All Request Team Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <picklist>
            <picklistValues>
                <fullName>SF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce for Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Config</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Dev_Group__c</fullName>
        <label>Assigned Dev Group</label>
        <picklist>
            <picklistValues>
                <fullName>Hanson</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habinck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raghu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanfield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_External_Dev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned External Dev</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_SF_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SF BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_SF_Dev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SF Dev</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>corp IT</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Approved_Priority__c</fullName>
        <inlineHelpText>Project Priority as decided by the Change Control Board</inlineHelpText>
        <label>Board Approved Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Analysts__c</fullName>
        <label>Business Analysts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>The business reasons for the requested change.</inlineHelpText>
        <label>Business Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Sponsor__c</fullName>
        <label>Business Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Priority__c</fullName>
        <inlineHelpText>Priority in relation to other projects for a Business Unit.</inlineHelpText>
        <label>Business Unit Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Classification__c</fullName>
        <inlineHelpText>Routine: standard procedural change 
Bug: Issue with SF 
Emergency: Issue preventing users from completing work 
Minor/Major Release: 
Training Opp: User error that can be fixed with training</inlineHelpText>
        <label>Change Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Routine</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Release (&gt;16)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Release (&gt;40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo (&gt;100)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_are_in_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify that Changes are in Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Case_Comments__c</fullName>
        <label>Closing Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cobalt_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use for Cobalt Sales and Service Admin</description>
        <label>Cobalt Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Reviewers__c</fullName>
        <label>Code Reviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_In__c</fullName>
        <formula>IF (Completed_in_Prod__c, &apos;Production&apos;, 
  IF (Completed_in_Training__c, &apos;Training&apos;, 
    IF (Completed_in_FullDev__c, &apos;Fulldev&apos;, 
        &apos;&apos;)))</formula>
        <label>Completed In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_in_FullDev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in FullDev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_Original_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Original Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Fulldev2 (QA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_Unified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Unified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Date__c</fullName>
        <label>Concept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_To_Fund__c</fullName>
        <inlineHelpText>Estimated Cost to Fund the project</inlineHelpText>
        <label>Cost To Fund</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Status_Notes__c</fullName>
        <label>Current Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted_w_Requirements__c</fullName>
        <label>Date Request Submitted w/ Requirements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_FullDev__c</fullName>
        <label>Date/Time Completed in FullDev</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_Original_Env__c</fullName>
        <label>Date/Time Completed in Original Env</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_Production__c</fullName>
        <label>Date/Time Completed in Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_QA__c</fullName>
        <label>Date/Time Completed in Fulldev2 (QA)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_Training__c</fullName>
        <label>Date/Time Completed in Training</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed_in_Unified__c</fullName>
        <label>Date/Time Completed in Unified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Center_Formula__c</fullName>
        <formula>IF(
   INCLUDES(User_Groups_Impacted__c, &quot;CB - Service&quot;), &quot;Support - DMG&quot;,
   IF (
      INCLUDES(User_Groups_Impacted__c, &quot;DS - Services&quot;), &quot;Support - Core&quot;,
      IF ( OR (
         INCLUDES(User_Groups_Impacted__c, &quot;LGT - Implementation&quot;),
         INCLUDES(User_Groups_Impacted__c, &quot;DS - Implementation&quot;),
         INCLUDES(User_Groups_Impacted__c, &quot;MV - Implementation&quot;),
         INCLUDES(User_Groups_Impacted__c, &quot;NIS - Implementation&quot;),
         INCLUDES(User_Groups_Impacted__c, &quot;DS - Laser&quot;)
         ), &quot;Implementation&quot;,
         IF ( OR (
            INCLUDES(User_Groups_Impacted__c, &quot;CB - Sales&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;CB - Mktg&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DS - CrdtSvcs&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DS - Inside Sales&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DS - Mktg&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;CB - Sales&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DS - Sales&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DMI - Sales&quot;),
            INCLUDES(User_Groups_Impacted__c, &quot;DMI - Sales&quot;)
            ), &quot;Sales&quot;, &quot;Global&quot;
         )
      )
   )
)</formula>
        <label>Delivery Center Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Strategy__c</fullName>
        <label>Deployment Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Add to ALL ENVIRONMENTS, no review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In TRAINING for Review Then PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrate from FULLDEV to TRAINING Then PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In PROD Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In FULLDEV Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In TRAINING Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Inbound_Change_Set__c</fullName>
        <label>Destination (Inbound) Change Set</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Start_Date__c</fullName>
        <label>Dev Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_to_Completion__c</fullName>
        <inlineHelpText>Please fill in time it took to completion in partial or full hours (eq. 0.25, 0.5, 2, 6)</inlineHelpText>
        <label>Duration to Completion</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <inlineHelpText>Person willing to fund the project</inlineHelpText>
        <label>Executive Sponsor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Developers__c</fullName>
        <label>External Developers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFG__c</fullName>
        <inlineHelpText>Fuel For Growth 
(Managers Only)</inlineHelpText>
        <label>FFG</label>
        <picklist>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities &amp; W/F Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Svc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simplify Biz &amp; Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Process Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimize E2E processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-FFG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Includes_Field_Data_Type_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Column Data Types Changes to:
ACCOUNT
CAMPAIGN
CAMPAIGN_ACCOUNT_MBRS
CMF_INFO
CONTACT
DEAL_CHANGE
DEAL_STATE
LASER_ARTWORK_ORDER
LEAD
MANUF_AT_DEALER
OPPORTUNITY
OPPORTUNITY_QUOTES
SOLUTION_DESIGN
SQT_NSA
SYSTEM_AT_DEALER
TASK
USER</inlineHelpText>
        <label>Includes Field Data Type Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Estimate__c</fullName>
        <inlineHelpText>Initial estimate in hours. Visible to Administrators only.</inlineHelpText>
        <label>Initial Estimate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Priority__c</fullName>
        <label>Internal Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 To Be Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Wishlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Priority_from_Theresa__c</fullName>
        <label>Notes/Priority from Theresa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPP_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OPP_Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Details__c</fullName>
        <label>Opportunity Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPP_FY_Initiative__c</fullName>
        <inlineHelpText>Enter the strategic business initiative(s) that this is associated with.</inlineHelpText>
        <label>FY Initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Has_Strategic_Impact__c</fullName>
        <formula>IF(ISBLANK(OPP_Strategic_Impact__c), FALSE, TRUE)</formula>
        <label>Has Strategic Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_Linked_To_FY_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked to FY Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_Origination__c</fullName>
        <label>Origination</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Spinoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OPP_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Point of Contact from within the Salesforce CoE</inlineHelpText>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>COE_Request_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPP_Potential_Delivery_Center__c</fullName>
        <label>Potential Delivery Center</label>
        <picklist>
            <picklistValues>
                <fullName>Sales / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMG Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OPP_Prerequisites__c</fullName>
        <inlineHelpText>Status of pre-requisites, such as: Funding approved, Vendor comparison complete.</inlineHelpText>
        <label>Prerequisites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Strategic_Impact__c</fullName>
        <label>Strategic Impact</label>
        <picklist>
            <picklistValues>
                <fullName>New User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Effort</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Environment__c</fullName>
        <label>Original Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Outbound_Change_Set__c</fullName>
        <label>Original (Outbound) Change Set</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>Owner: Queue Name or User Name</description>
        <formula>IF(ISBLANK(Owner:Queue.QueueName), Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritization_Criteria__c</fullName>
        <inlineHelpText>Criteria for Governance Board ranked the project as they did.</inlineHelpText>
        <label>Prioritization Criteria</label>
        <picklist>
            <picklistValues>
                <fullName># of Depts / Users Impacted by change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affecting Quota Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Directive / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development vs. Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immovable Due Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retain Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Generating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streamline Processes / Gain Efficiencies</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Requestor Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Hysteria!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>New - Discuss with Theresa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Info from Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Review with Business/Stakeholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Prioritization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Dev Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Discovery/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Additional Research from SA/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for SAB Review/Apprpoval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_to_Change_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determined upon project review by the SA Team.</inlineHelpText>
        <label>Project to Change Board</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>